--- a/my-new-year/index.html
+++ b/my-new-year/index.html
@@ -15,6 +15,7 @@
             <p class="header-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
             <p><button class="btn-primary">Contact Us</button></p>
         </section>
+        
     </header>
         <section class="middle">
            <div class="middle-image"><img src="images/person.png" alt=""></div> 
@@ -50,29 +51,29 @@
             <div class="plan-container">
                 <div class="plan">
                     <img src="images/icons/web.png" alt="">
-                    <p class="plan-title">Web Development</p>
+                    <h3 class="plan-title">Web Development</h3>
                     <p class="plan-description">I want to start</p>
                 </div>
                 <div class="plan">
                     <img src="images/icons/js.png" alt="">
-                    <p class="plan-title">Javascript</p>
+                    <h3 class="plan-title">Javascript</h3>
                     <p class="plan-description">I want to learn</p>
                 </div>
                 <div class="plan">
                     <img src="images/icons/smoke.png" alt="">
-                    <p class="plan-title">Smoking Habit</p>
+                    <h3 class="plan-title">Smoking Habit</h3>
                     <p class="plan-description">I want to end</p>
                 </div>
                 <div class="plan">
                     <img src="images/icons/ecom.png" alt="">
-                    <p class="plan-title">ecommerce</p>
+                    <h3 class="plan-title">ecommerce</h3>
                     <p class="plan-description">I want to develop</p>
                 </div>
             </div>
         </section>
 
         <section class="watch">
-           <div class="watch-details"><h2 class="watch-title"> Awlays keep a positive mindset</h2>
+           <div class="watch-details"><h2 class="watch-title"> Always keep a positive mindset</h2>
             <p><button class="button2">Call Now</button></p>
         </div> 
 
